konst/tests/misc_tests/destructure_ui_tests/drop_braced_struct_err.stderr
error[E0308]: mismatched types
  --> tests/misc_tests/destructure_ui_tests/drop_braced_struct_err.rs:13:5
   |
13 |     konst::destructure!{Braced{bar, baz, qux} = foo}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `__DoesNotImplDrop<Braced>`, found `__ImplsDrop<Braced>`
   |
   = note: expected struct `__DoesNotImplDrop<Braced>`
              found struct `__ImplsDrop<Braced>`
   = note: this error originates in the macro `$crate::__destructure_struct` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)
